--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -34,3 +34,17 @@
 	height: 100%;
 	border-radius: 50px;
 }
+#villano{
+	background-color: #9000;
+	border: 4px dashed #b202;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
+	position: absolute;
+
+}
+#imag2{
+	width: 100%;
+	height: 100%;
+	border-radius: 50px;
+}
